fixed style on workshop tab to prevent scrunched look on safari

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -1819,3 +1819,12 @@ h1 .label.workshop-tag{
   font-weight: bold;
 }
 
+.nav.nav-tabs.workshop-tabs{
+  margin-bottom: 0px;
+  margin-left: 10px;
+  margin-top: 20px;
+  border-bottom: 0px;
+  position: aboslute;
+  z-index: 2;
+}
+
